--- a/resources/langs/ar-SY.json
+++ b/resources/langs/ar-SY.json
@@ -1,4 +1,34 @@
 {
     "welcome" : "مرحبا ",
-    "login" : "تسجيل الدخول "
+    "login" : "تسجيل الدخول ",
+    "emptyField": "الحقل فارغ قم بتعبئة المعلومات",
+    "invalidPhoneNumber": "رقم الهاتف غير مطابق",
+    "invalidNumber": "الرقم المدخل غير مطابق",
+    "invalidLength": "الحد الادنى {} محارف",
+    "invalidEmailAddress": "عنوان البريد الالكتروني غير مطابق",
+    "missingUppercase": "يجب أن تحوي كلمة المرور على أحرف كبيرة",
+    "missingLowercase": "يجب أن تحوي كلمة المرور على أحرف صغيرة",
+    "missingSymbols": "يجب أن تحوي كلمة المرور على رموز",
+    "chooseAnImage": "قم باختيار صورة",
+    "invalidDateFormat": "تنسيق التاريخ غير مطابق (dd-MM-yyyy)",
+    "youMustEnterANumberLessThan": "يجب ادخال رقم أصغر من {}",
+    "youMustEnterANumberMoreThan": "يجب ادخال رقم أكبر من {}",
+    "passwordsDoNotMatch": "كملة المرور غير مطابقة",
+    "invalidPinCode": "الرمز السري للدفع يجب أن يتكون من {} محارف",
+    "invalidOtpCode": "رمز التحقق otp يجب أن يتكون من {} محارف",
+    "loginDone": "تم تسجيل الدخول بنجاح",
+    "phoneNumber": "رقم الهاتف",
+    "enterYourPhoneNumber": "أدخل رقم هاتفك",
+    "email":"البريد الالكتروني",
+    "enterYourEmail" : "أدخل بريدك الالكتروني",
+    "password": "كلمة المرور",
+    "enterPassword": "أدخل كلمة المرور",
+    "doNotHaveAnAccount": "ليس لديك حساب ؟",
+    "forgetPassword": "نسيان كلمة المرور",
+    "register": "انشاء حساب"
+
+
+
+
+
 }
