--- a/resources/langs/en-US.json
+++ b/resources/langs/en-US.json
@@ -1,4 +1,33 @@
 {
     "welcome" : "Welcome",
-    "login" : "login"
+    "login" : "login",
+    "emptyField": "Empty field, try to add data",
+    "invalidPhoneNumber": "Invalid Phone Number",
+    "invalidNumber": "Invalid number format",
+    "invalidLength": "Invalid Length, Minimum {} characters",
+    "invalidEmailAddress": "Invalid email address",
+    "missingUppercase": "Password must contain uppercase letters",
+    "missingLowercase": "Password must contain lowercase letters",
+    "missingSymbols": "Password must contain symbols",
+    "chooseAnImage": "Choose an image",
+    "invalidDateFormat": "Invalid date format (dd-MM-yyyy)",
+    "youMustEnterANumberLessThan": "You must enter a number less than {}",
+    "youMustEnterANumberMoreThan": "You must enter a number more than {}",
+    "passwordsDoNotMatch": "Passwords do not match",
+    "invalidPinCode": "Smart payment PIN must consist of {} Characters",
+    "invalidOtpCode": "Otp code must consist of {} Characters",
+    "loginDone": "Login Successfully",
+    "phoneNumber": "Phone Number",
+    "enterYourPhoneNumber": "Enter Your Phone Number",
+    "email" : "email",
+    "enterYourEmail":"Enter Your Email",
+    "password": "Password",
+    "enterPassword": "Enter Your Password",
+    "doNotHaveAnAccount": "Don't Have An Account?",
+    "register": "Create Account",
+    "forgetPassword": "Forget Password"
+    
+
+
+
 }
